[package]
name = "mono-rs"
description = "Lightweight wrapper aroud mono. !!WIP!! "
authors = ["Bartosz 'b4rti' Gorol"]
repository = "https://github.com/b4rti/mono-rs"
license = "MIT"
version = "0.1.2"
edition = "2018"
links = "mono-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# libc = "0.2"
